--- a/authentication/package.json
+++ b/authentication/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^3.1.20",
     "@popperjs/core": "^2.11.8",
+    "aws-amplify": "^5.3.3",
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "firebase": "^9.23.0",
