--- a/global-vuex/package.json
+++ b/global-vuex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authentication",
+  "name": "global-vuex",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,18 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-vue": "^3.1.20",
-    "@azure/core-http": "^3.0.2",
-    "@azure/msal-browser": "^2.37.1",
-    "@azure/storage-blob": "^12.14.0",
-    "@popperjs/core": "^2.11.8",
-    "aws-amplify": "^5.3.3",
-    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
-    "firebase": "^9.23.0",
-    "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -28,6 +20,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
