--- a/authentication/package.json
+++ b/authentication/package.json
@@ -19,7 +19,9 @@
     "firebase": "^9.23.0",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-cookies": "^1.8.3",
+    "vue-router": "^4.0.3",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
