--- a/projectwithvite/package.json
+++ b/projectwithvite/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@types/jest": "^29.5.4",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "jest": "^29.6.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vitest": "^0.34.3",
     "vue-tsc": "^1.8.5"
   }
 }
